--- a/Source/LedMatrix8x16Wing/Driver/LedMatrix8x16Wing.csproj
+++ b/Source/LedMatrix8x16Wing/Driver/LedMatrix8x16Wing.csproj
@@ -24,6 +24,6 @@
     <None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Meadow.Foundation\Source\Meadow.Foundation.Peripherals\ICs.IOExpanders.Ht16k33\Driver\ICs.IOExpanders.Ht16k33.csproj" />
+    <PackageReference Include="Meadow.Foundation.ICs.IOExpanders.Ht16k33" Version="*" />
   </ItemGroup>
 </Project>
