--- a/Source/CharlieWing/Samples/CharlieWing_Sample/CharlieWing_Sample.csproj
+++ b/Source/CharlieWing/Samples/CharlieWing_Sample/CharlieWing_Sample.csproj
@@ -6,8 +6,8 @@
     <AssemblyName>App</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-	<ProjectReference Include="..\..\..\..\..\Meadow.Core\source\implementations\f7\Meadow.F7\Meadow.F7.csproj" />
-	<ProjectReference Include="..\..\..\..\..\Meadow.Foundation\Source\Meadow.Foundation.Libraries_and_Frameworks\Graphics.MicroGraphics\Driver\Graphics.MicroGraphics.csproj" />
+    <PackageReference Include="Meadow.F7" Version="*" />
+    <PackageReference Include="Meadow.Foundation.Graphics.MicroGraphics" Version="*" />
     <ProjectReference Include="..\..\Driver\CharlieWing.csproj" />
   </ItemGroup>
 </Project>
