--- a/Source/GPSWing/Driver/GPSWing.csproj
+++ b/Source/GPSWing/Driver/GPSWing.csproj
@@ -24,6 +24,6 @@
     <None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Meadow.Foundation\Source\Meadow.Foundation.Peripherals\Sensors.Gnss.Mt3339\Driver\Sensors.Gnss.Mt3339.csproj" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Gnss.Mt3339" Version="*" />
   </ItemGroup>
 </Project>
