--- a/Source/NeoPixelWing/Driver/NeoPixelWing.csproj
+++ b/Source/NeoPixelWing/Driver/NeoPixelWing.csproj
@@ -24,7 +24,7 @@
     <None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Meadow.Foundation\Source\Meadow.Foundation.Libraries_and_Frameworks\Graphics.MicroGraphics\Driver\Graphics.MicroGraphics.csproj" />
-    <ProjectReference Include="..\..\..\..\Meadow.Foundation\Source\Meadow.Foundation.Peripherals\Leds.Ws2812\Driver\Leds.Ws2812.csproj" />
+    <PackageReference Include="Meadow.Foundation.Graphics.MicroGraphics" Version="*" />
+    <PackageReference Include="Meadow.Foundation.Leds.Ws2812" Version="*" />
   </ItemGroup>
 </Project>
