--- a/Source/NineDofImuWing/Driver/NineDofImuWing.csproj
+++ b/Source/NineDofImuWing/Driver/NineDofImuWing.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Meadow.Sdk/1.1.0">
+<Project Sdk="Meadow.Sdk/1.1.0">
   <PropertyGroup>
 	  <PackageReadmeFile>Readme.md</PackageReadmeFile>
 	  <Nullable>enable</Nullable>
@@ -24,7 +24,7 @@
 	<None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Meadow.Foundation\Source\Meadow.Foundation.Peripherals\Sensors.Motion.Lis3Mdl\Driver\Sensors.Motion.Lis3Mdl.csproj" />
-    <ProjectReference Include="..\..\..\..\Meadow.Foundation\Source\Meadow.Foundation.Peripherals\Sensors.Motion.Lsm6Dsox\Driver\Sensors.Motion.Lsm6Dsox.csproj" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Motion.Lis3mdl" Version="*" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Motion.Lsm6dsox" Version="*" />
   </ItemGroup>
 </Project>
