--- a/Source/OLED128x32Wing/Driver/OLED128x32Wing.csproj
+++ b/Source/OLED128x32Wing/Driver/OLED128x32Wing.csproj
@@ -24,6 +24,6 @@
     <None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Meadow.Foundation\Source\Meadow.Foundation.Peripherals\Displays.Ssd130x\Driver\Displays.Ssd130x.csproj" />
+    <PackageReference Include="Meadow.Foundation.Displays.Ssd130x" Version="*" />
   </ItemGroup>
 </Project>
