--- a/Source/ServoWing/Driver/ServoWing.csproj
+++ b/Source/ServoWing/Driver/ServoWing.csproj
@@ -24,7 +24,7 @@
     <None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Meadow.Foundation\Source\Meadow.Foundation.Peripherals\ICs.IOExpanders.Pca9685\Driver\ICs.IOExpanders.Pca9685.csproj" />
-    <ProjectReference Include="..\..\..\..\Meadow.Foundation\Source\Meadow.Foundation.Peripherals\Servos.ServoCore\Driver\Servos.ServoCore.csproj" />
+    <PackageReference Include="Meadow.Foundation.ICs.IOExpanders.Pca9685" Version="*" />
+    <PackageReference Include="Meadow.Foundation.Servos.ServoCore" Version="*" />
   </ItemGroup>
 </Project>
