--- a/Source/CharlieWing/Driver/CharlieWing.csproj
+++ b/Source/CharlieWing/Driver/CharlieWing.csproj
@@ -24,6 +24,6 @@
     <None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Meadow.Foundation.ICs.IOExpanders.Is31fl3731" Version="*" />
+    <PackageReference Include="Meadow.Foundation.ICs.IOExpanders.Is31fl3731" Version="1.5.0" />
   </ItemGroup>
 </Project>
