--- a/Source/DotstarWing/Driver/DotstarWing.csproj
+++ b/Source/DotstarWing/Driver/DotstarWing.csproj
@@ -24,6 +24,6 @@
     <None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Meadow.Foundation.Leds.Apa102" Version="*" />
+    <PackageReference Include="Meadow.Foundation.Leds.Apa102" Version="1.5.0" />
   </ItemGroup>
 </Project>
