--- a/Source/NineDofImuWing/Driver/NineDofImuWing.csproj
+++ b/Source/NineDofImuWing/Driver/NineDofImuWing.csproj
@@ -24,7 +24,7 @@
 	<None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Meadow.Foundation.Sensors.Motion.Lis3mdl" Version="*" />
-    <PackageReference Include="Meadow.Foundation.Sensors.Motion.Lsm6dsox" Version="*" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Motion.Lis3mdl" Version="1.5.0" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Motion.Lsm6dsox" Version="1.5.0" />
   </ItemGroup>
 </Project>
