--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: windows-latest
     
     steps:
+    
+    - name: Support longpaths
+      run: git config --system core.longpaths true
+
     - name: Checkout Meadow.Contracts
       uses: actions/checkout@v3
       with:
