--- a/Source/OLED128x64Wing/Sample/OLED128x64Wing_Sample/OLED128x64Wing_Sample.csproj
+++ b/Source/OLED128x64Wing/Sample/OLED128x64Wing_Sample/OLED128x64Wing_Sample.csproj
@@ -8,6 +8,6 @@
   <ItemGroup>
     <PackageReference Include="Meadow.F7" Version="1.7.0" />
     <PackageReference Include="Meadow.Foundation.Graphics.MicroGraphics" Version="1.7.0" />
-    <ProjectReference Include="..\..\Driver\CharlieWing.csproj" />
+    <ProjectReference Include="..\..\Driver\OLED128x64Wing.csproj" />
   </ItemGroup>
 </Project>
