--- a/.github/workflows/main-ci.yml
+++ b/.github/workflows/main-ci.yml
@@ -3,7 +3,6 @@ name: Main Build
 on:
   workflow_dispatch:
   pull_request:
-    branches: [ main ]
   push:
     branches: [ main ]
 
@@ -18,6 +17,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: Meadow.Foundation.FeatherWings
+        ref: main
         
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
