--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -3,6 +3,7 @@ name: Develop Build
 on:
   workflow_dispatch:
   pull_request:
+    branches: [ develop ]
   push:
     branches: [ develop ]
 
@@ -69,7 +70,6 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: Meadow.Foundation.FeatherWings
-        ref: develop
         
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
