--- a/Source/GPSWing/Driver/GPSWing.csproj
+++ b/Source/GPSWing/Driver/GPSWing.csproj
@@ -24,6 +24,6 @@
     <None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Meadow.Foundation.Sensors.Gnss.Mt3339" Version="1.12.0" />
+    <PackageReference Include="Meadow.Foundation.Sensors.Gnss.Mt3339" Version="1.12.8.1-beta" />
   </ItemGroup>
 </Project>
