--- a/Source/NeoPixelWing/Driver/NeoPixelWing.csproj
+++ b/Source/NeoPixelWing/Driver/NeoPixelWing.csproj
@@ -24,7 +24,7 @@
     <None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Meadow.Foundation.Graphics.MicroGraphics" Version="1.12.0" />
-    <PackageReference Include="Meadow.Foundation.Leds.Ws2812" Version="1.12.0" />
+    <PackageReference Include="Meadow.Foundation.Graphics.MicroGraphics" Version="1.12.8.1-beta" />
+    <PackageReference Include="Meadow.Foundation.Leds.Ws2812" Version="1.12.8.1-beta" />
   </ItemGroup>
 </Project>
