--- a/Source/CanBusWing/Samples/CanBusWing_Sample/CanBusWing_Sample.csproj
+++ b/Source/CanBusWing/Samples/CanBusWing_Sample/CanBusWing_Sample.csproj
@@ -7,6 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Meadow.F7" Version="2.0.0.3" />
-    <ProjectReference Include="..\..\Driver\MotorWing.csproj" />
+	<ProjectReference Include="..\..\Driver\CanBusWing.csproj" />
   </ItemGroup>
 </Project>
