--- a/Source/ServoWing/Driver/ServoWing.csproj
+++ b/Source/ServoWing/Driver/ServoWing.csproj
@@ -24,7 +24,7 @@
     <None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Meadow.Foundation.ICs.IOExpanders.Pca9685" Version="1.12.0" />
-    <PackageReference Include="Meadow.Foundation.Servos.ServoCore" Version="1.12.0" />
+    <PackageReference Include="Meadow.Foundation.Servos" Version="2.0.0.3" />
+    <PackageReference Include="Meadow.Foundation.ICs.IOExpanders.Pca9685" Version="2.0.0.3" />
   </ItemGroup>
 </Project>
