--- a/Source/CanBusWing/Driver/CanBusWing.csproj
+++ b/Source/CanBusWing/Driver/CanBusWing.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Meadow.Sdk/1.1.0">
   <PropertyGroup>
     <Version>1.11.0</Version>
-    <PackageReadmeFile>Readme.md</PackageReadmeFile>
     <Nullable>enable</Nullable>
     <LangVersion>10.0</LangVersion>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
@@ -10,20 +9,21 @@
     <Authors>Wilderness Labs, Inc</Authors>
     <TargetFramework>netstandard2.1</TargetFramework>
     <OutputType>Library</OutputType>
-    <AssemblyName>OLED128x32</AssemblyName>
+    <AssemblyName>CanBusWing</AssemblyName>
     <Company>Wilderness Labs, Inc</Company>
     <PackageProjectUrl>http://developer.wildernesslabs.co/Meadow/Meadow.Foundation/</PackageProjectUrl>
-    <PackageId>Meadow.Foundation.FeatherWings.OLED128x32Wing</PackageId>
+    <PackageId>Meadow.Foundation.FeatherWings.CanBusWing</PackageId>
     <RepositoryUrl>https://github.com/WildernessLabs/Meadow.Foundation.FeatherWings</RepositoryUrl>
-    <PackageTags>Meadow.Foundation, FeatherWing, OLED128x32, SSD1306</PackageTags>
+    <PackageTags>Meadow.Foundation, CanBusWing, CAN</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Description>AdaFruit OLED 128x32 monochrome display FeatherWing</Description>
+    <Description>AdaFruit CAN Bus FeatherWing</Description>
   </PropertyGroup>
   <ItemGroup>
     <None Include=".\Readme.md" Pack="true" PackagePath="" />
     <None Include="..\..\icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Meadow.Foundation.Displays.Ssd130x" Version="2.0.1.2" />
-  </ItemGroup>
+    <ItemGroup>
+    <PackageReference Include="Meadow.F7" Version="2.0.1.2" />
+    <PackageReference Include="Meadow.Foundation.ICs.CAN.Mcp2515" Version="2.0.1.2" />
+    </ItemGroup>
 </Project>
